--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.3.2",
-    "vite-plugin-glsl": "^1.1.2"
-  },
-  "dependencies": {
-    "gsap": "^3.11.5",
-    "lil-gui": "^0.18.1",
-    "twgl.js": "^5.3.1"
+    "vite": "^5.2.9"
   }
 }
